--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>JSFader</title>
+	<title>JQFadeloader</title>
 	<link rel="stylesheet" type="text/css" href="css/main.css" />
 	<link rel="stylesheet" type="text/css" href="css/shCore.css" />
 	<link rel="stylesheet" type="text/css" href="css/shThemeDefault.css" />
