Add link to docs

--- a/ajax.html
+++ b/ajax.html
@@ -16,7 +16,7 @@
 		.a, .b, .c, .d, .e, .f, .g, .h, .i, .j, .k, .l, .m, .n, .o, .p, .q, .r, .s, .t, .u, .v, .w, .x, .y, .z {
 			display: none;
 			vertical-align: top;
-			margin-bottom: 5px;
+			margin: 0 5px 5px 0;
 		}
 		@media all and (max-width: 400px) {
 			.let {
