--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 		<br>
 		The jQuery Fadeloader plugin lets you easily implement a preloader to your site or section, using a cascade fade in effect to show specific blocks of content (for example, HEADER > MENU > CONTENT > FOOTER).
 		<br><br>
+		<a href="https://github.com/periplox/jquery.fadeloader" target="_blank">DOWNLOAD & DOCS</a>
+		<br><br>
 		<label>Mode:</label><br>
 		<select id="mode" class="wide">
 			<option selected value="class">select by class name</option>
