--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<br>
 		The jQuery Fadeloader plugin lets you easily implement a preloader to your site or section, using a cascade fade in effect to show specific blocks of content (for example, HEADER > MENU > CONTENT > FOOTER).
 		<br><br>
-		<a href="https://github.com/periplox/jquery.fadeloader" target="_blank">DOWNLOAD & DOCS</a>
+		<a href="https://github.com/periplox/jquery.fadeloader" target="_blank" style="font-weight:bold;">DOWNLOAD & DOCS</a>
 		<br><br>
 		<label>Mode:</label><br>
 		<select id="mode" class="wide">
