--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 </head>
 <body>
+	<a href="https://github.com/periplox/jquery.fadeloader"><img style="position: absolute; z-index: 999; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png" alt="Fork me on GitHub"></a>
 	<div class="txt">
 		<h1>jQuery Fadeloader plugin demo</h1>
+		<p onclick="document.location.href='https://github.com/periplox?tab=repositories';">by <strong>Periplo</strong></p>
 		<br>
+		
 		The jQuery Fadeloader plugin lets you easily implement a preloader to your site or section, using a cascade fade in effect to show specific blocks of content (for example, HEADER > MENU > CONTENT > FOOTER).
 		<br><br>
 		<a href="https://github.com/periplox/jquery.fadeloader" target="_blank" style="font-weight:bold;font-size:20px;">DOWNLOAD & DOCS</a>
